[package]
name = "av1-grain"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"
license = "BSD-2-Clause"
description = "Helpers for generating and parsing AV1 film grain data"
readme = "README.md"
repository = "https://github.com/rust-av/av1-grain"
homepage = "https://github.com/rust-av/av1-grain"
documentation = "https://docs.rs/av1-gran"

[dependencies]
anyhow = "1.0.58"
arrayvec = "0.7.2"
itertools = { version = "0.10.3", optional = true }
nom = { version = "7.1.1", optional = true }
serde = { version = "1.0.140", optional = true, features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = ["create", "parse"]
create = []
parse = ["itertools", "nom"]
serialize = ["serde", "arrayvec/serde"]

[profile.release]
codegen-units = 1
lto = "thin"
